# serene-nano

./: .gitignore  Cargo.toml  README.md  bot-command  dump.rdb  nohup.out  redis-server  topics.txt  update-server
src/: acarole.rs  ask.rs  command_responder.rs  config.rs  dictionary.rs  geolocation.rs  main.rs  message_filter.rs  message_handler.rs  message_handler.rs.orig  poetry.rs  rep.rs  say.rs  set.rs  trace_moe.rs  typst_base.rs  typst_eqtn.rs  typst_main.rs  utils.rs  weather.rs  wiki.rs
src/math_markup/: latex.rs  mod.rs  preferred_markup.rs  typst_base.rs  typst_main.rs  typst_rebase.rs
src/translate/: available_langs.rs  detection.rs  mod.rs  translate.rs  translation.rs
