[package]
name = "nano-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wikipedia = { version = "0.3.4", features = ["http-client"] }
regex = "1"
reqwest = {version = "0.11.4", features = ["json"]}
scraper = "0.12.0"
partial_application = "0.2.1"
redis = "0.21.2"
lingua = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "0.8.4"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "cache",
    "http",
    "model",
    "unstable_discord_api",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.10.9"

[dependencies.panmath]
path = "../panmath"
