[package]
name = "nano-bot"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = "1"
reqwest = {version = "0.11.4", features = ["json"]}
redis = "0.21.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "0.8.4"
serenity-additions = "0.3.4"
deepl-openapi = "2.7.1"
typst = { git = "https://github.com/typst/typst" }
typst-library = { git = "https://github.com/typst/typst" }
comemo = "0.3.0"
time = "0.3.22"
image = { version = "0.24", default_features = false, features = ["png"] }
bytemuck = "1.13.1"
once_cell = "1.18.0"
poise = "0.5.5"
anyhow = "1.0.71"
scraper = "0.17.1"
pomsky-macro = "0.10.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "cache",
    "http",
    "model",
    "unstable_discord_api",
    "utils",
    "native_tls_backend",
]
version = "0.11.5"

[dependencies.lingua]
version = "1.4.0"
default-features = false
features = [
    "bulgarian",
    "czech",
    "danish",
    "german",
    "greek",
    "english",
    "spanish",
    "estonian",
    "finnish",
    "french",
    "hindi",
    "hungarian",
    "indonesian",
    "italian",
    "japanese",
    "lithuanian",
    "latvian",
    "dutch",
    "polish",
    "portuguese",
    "romanian",
    "russian",
    "slovak",
    "slovene",
    "swedish",
    "ukrainian",
    "chinese",
]
